# SitzQ

./: index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  Sound.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: app_state.rs  audio.rs  connections.rs  main.rs
src/api/: AudioSystem.ts  BackendAPI.ts
