[package]
name = "sitzq"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "protocol-asset", "dialog-save", "dialog-open"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.34.0", features = ["full"] }
serde_json = "1.0"
uuid = "1.6.1"
rodio = "0.17.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
